# Advanced-Autonomous-Vehicule

./: .gitignore
C++/: CMakeLists.txt
C++/BehaviorCostFunction/: CMakeLists.txt  cost.cpp  cost.h  main.cpp
C++/BehaviorInefficiencyCostFunction/: CMakeLists.txt  cost.cpp  main.cpp
C++/BehaviorLaneChangeCostFunction/: CMakeLists.txt  cost.cpp
C++/BehaviorSpeedChangeCostFunction/: CMakeLists.txt  cost.cpp  cost.h
C++/BehavioralPlanner/: CMakeLists.txt  cost.cpp  cost.h  main.cpp  road.cpp  road.h  vehicle.cpp  vehicle.h
C++/CalculateJacobian/: CMakeLists.txt  main.cpp
C++/ComplexKalmanFilter/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_package.h  tracking.cpp  tracking.h
C++/FullFilter/: CMakeLists.txt  helpers.h  main.cpp
C++/GaussianSampling/: CMakeLists.txt  main.cpp
C++/GenerateAugmentedSigmaPoints/: CMakeLists.txt  ukf.cpp
C++/GenerateSigmaPoints/: CMakeLists.txt  ukf.cpp  ukf.h
C++/HomogeneousPositionTransformation/: CMakeLists.txt  main.cpp
C++/HybridAStar/: CMakeLists.txt  hybrid_breadth_first.cpp  hybrid_breadth_first.h  main.cpp
C++/KalmanFilter/: CMakeLists.txt  main.cpp
C++/MotionModelProbability/: CMakeLists.txt  helpers.h  main.cpp
C++/MyNaiveBayesMotionClassifier/: CMakeLists.txt  classifier.cpp  classifier.h
C++/NaiveBayesMotionClassifier/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp
C++/ObservationModelProbability/: CMakeLists.txt  headers.h  main.cpp
C++/ParticleWeight/: CMakeLists.txt  main.cpp
C++/PriorInitialization/: CMakeLists.txt  main.cpp
C++/PseudoRangeEsitimator/: CMakeLists.txt  helpers.h  main.cpp
C++/PseudoRangeEstimator/: CMakeLists.txt  main.cpp
C++/QuinticPolynomialSolver/: CMakeLists.txt  grader.h  main.cpp
C++/RootMeanSquaredError/: CMakeLists.txt  main.cpp
C++/SigmaPointPrediction/: CMakeLists.txt  ukf.cpp
Python/advanced_computer_vision/: lane_histogram.py  measuring_curvature_1.py  measuring_curvature_scaled.py  search_from_prior.py  sliding_window.py
Python/camera_calibration/: apply_sobel_operator.py  distortion_correction.py  find_corners.py  magnitude_of_gradient.py  perspective_transform.py  (+1 more)
(+68 files in other folders)
