cmake_minimum_required(VERSION 3.16)
project(C__)

set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES("libraries/eigen3/Eigen")

add_subdirectory(KalmanFilter)
add_subdirectory(ComplexKalmanFilter)
add_subdirectory(CalculateJacobian)
add_subdirectory(RootMeanSquaredError)
add_subdirectory(PriorInitialization)
add_subdirectory(MotionModelProbability)
add_subdirectory(PseudoRangeEstimator)
add_subdirectory(ObservationModelProbability)
add_subdirectory(FullFilter)
add_subdirectory(GaussianSampling)
add_subdirectory(HomogeneousPositionTransformation)
add_subdirectory(ParticleWeight)
add_subdirectory(NaiveBayesMotionClassifier)
add_subdirectory(BehaviorLaneChangeCostFunction)
add_subdirectory(BehaviorSpeedChangeCostFunction)
add_subdirectory(BehavioralPlanner)
add_subdirectory(HybridAStar)
add_subdirectory(QuinticPolynomialSolver)
add_subdirectory(GenerateSigmaPoints)
add_subdirectory(GenerateAugmentedSigmaPoints)
add_subdirectory(SigmaPointPrediction)